--- a/main.html
+++ b/main.html
@@ -8,8 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<h1>Badrinath</h1>
+	<br>
+	<p>Badrinath is a holy place where lord shiva resides, it is a cool hilly area where trekking feels adventurous</p>
+    
+	<ol>
+		<li>color of <b>apples</b></li>
+		<li>color of <b>apples</b></li>
+		<li>color of <b>apples</b></li>
+		<li>color of <b>apples</b></li>
+		<li>color of <b>apples</b></li>
+	</ol>
+	<ul>
+		<li>color of <b>apples</b></li>
+		<li>color of <b>apples</b></li>
+		<li>color of <b>apples</b></li>
+		<li>color of <b>apples</b></li>
+	</ul>
+	<script type="text/javascript" src="./script.js"></script>
 
 </body>
 
