--- a/main.html
+++ b/main.html
@@ -24,6 +24,7 @@
 		<li>color of <b>apples</b></li>
 		<li>color of <b>apples</b></li>
 		<li>color of <b>apples</b></li>
+		<li>color of <b>apples</b></li>
 	</ul>
 	<script type="text/javascript" src="./script.js"></script>
 
