--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<h1>Badrinath</h1>
 	<br>
-	<p>Badrinath is a holy place where lord shiva resides, it is a cool hilly area where trekking feels adventurous</p>
+	<p>Badrinath is i a holy place where lord shiva resides, it is a cool hilly area where trekking feels adventurous</p>
     
 	<ol>
 		<li>color of <b>apples</b></li>
@@ -24,7 +24,7 @@
 		<li>color of <b>apples</b></li>
 		<li>color of <b>apples</b></li>
 		<li>color of <b>apples</b></li>
-		<li>color of <b>apples</b></li>
+		<li>color of <i>apples</i></li>
 	</ul>
 	<script type="text/javascript" src="./script.js"></script>
 
